# api_produtos

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: Pipeline.yml
api/: settings.py  urls.py
api/base/: admin.py  models.py  urls.py  views.py
api/base/migrations/: 0001_initial.py
api/base/tests/: test_home.py
contrib/: env-sample
