[tool.poetry]
name = "api-produtos"
version = "0.1.0"
description = "API de produtos para estabelecimentos comerciais."
authors = ["Dérick Eduardo <dreduardo2222@gmail.com>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
gunicorn = "^23.0.0"
python-decouple = "^3.8"
collectfast = "^2.2.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
ipython = "^8.32.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
